added comments to main js with outline ideas for vars and functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,12 @@ h1 {
 nav {
     float: right;
     font-size: 38px;
+    color: purple;
 }
 
 #quizbox {
     display: flex;
-    border: 8px solid blue;
+    border: 8px solid purple;
     border-radius: 25px;
     margin: 20px 20px 20px 20px;
 }
