updating README with image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,20 +36,23 @@ nav {
 }
 
 main {
-    --hue: var(--hue-neutral);
+    
     display: flex;
     width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
+}
+body {
+    --hue: var(--hue-neutral);
     background-color: hsl(var(--hue), 100%, 20%);
 }
 
-main.correct {
+body.correct {
     --hue: var(--hue-correct);
 }
 
-main.wrong {
+body.wrong {
     --hue: var(--hue-wrong);
 }
 
